# Video-ToolKit

./: Cargo.toml  README.md
crates/batch_processing/: Cargo.toml
crates/batch_processing/src/: lib.rs
crates/clipper/: Cargo.toml
crates/clipper/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  ffmpeg.rs  formats.rs  lib.rs
crates/gif_converter/: Cargo.toml
crates/gif_converter/src/: lib.rs
crates/gif_transparency/: Cargo.toml
crates/gif_transparency/src/: lib.rs
crates/merger/: Cargo.toml
crates/merger/src/: lib.rs
crates/plugin_system/: Cargo.toml
crates/plugin_system/src/: lib.rs
crates/profile_system/: Cargo.toml
crates/profile_system/src/: lib.rs
crates/splitter/: Cargo.toml
crates/splitter/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  lib.rs
crates/ui/src/tabs/: batch_tab.rs  clipper_tab.rs  gif_converter_tab.rs  gif_transparency_tab.rs  merger_tab.rs  mod.rs  plugins_tab.rs  profiles_tab.rs  splitter_tab.rs
docs/: webm_to_gif.md
plugins/watermark_plugin/: Cargo.toml
plugins/watermark_plugin/src/: lib.rs
src/: main.rs
