[package]
name = "Video-ToolKit"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Video processing utilities for MP4 files"

[dependencies]
anyhow = "1.0.75"         # Error handling
clap = { version = "4.4.6", features = ["derive"] }  # Command-line argument parsing
eframe = "0.24.0"         # egui framework for GUI
egui = "0.24.0"           # GUI library
lazy_static = "1.4.0"     # Lazy static initialization
regex = "1.9.5"           # Regular expressions for timestamp validation
rfd = "0.12.0"            # Native file dialogs
thiserror = "1.0.48"      # Custom error definitions
bytemuck = "=1.14.0"      # Pinned to avoid edition2024 dependency
bytemuck_derive = "=1.5.0" # Pinned to avoid edition2024 dependency
serde = { version = "1.0", features = ["derive"] } # Serialization for profiles
serde_json = "1.0"        # JSON serialization

# Workspace dependencies
common = { path = "crates/common" }
clipper = { path = "crates/clipper" }
gif_converter = { path = "crates/gif_converter" }
gif_transparency = { path = "crates/gif_transparency" }
splitter = { path = "crates/splitter" }
merger = { path = "crates/merger" }
ui = { path = "crates/ui" }
plugin_system = { path = "crates/plugin_system" }
profile_system = { path = "crates/profile_system" }
batch_processing = { path = "crates/batch_processing" }

[workspace]
members = [
    "crates/common",
    "crates/clipper",
    "crates/gif_converter",
    "crates/gif_transparency",
    "crates/splitter",
    "crates/merger",
    "crates/ui",
    "crates/plugin_system",
    "crates/profile_system",
    "crates/batch_processing", "plugins/watermark_plugin",
]
