[package]
name = "batch_processing"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
clipper = { path = "../clipper" }
gif_converter = { path = "../gif_converter" }
gif_transparency = { path = "../gif_transparency" }
splitter = { path = "../splitter" }
merger = { path = "../merger" }

anyhow = "1.0.75"
thiserror = "1.0.48"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.3"      # For directory traversal
rayon = "1.7.0"        # For parallel processing
indicatif = "0.17.5"   # For progress bars
regex = "1.9.5"