[package]
name = "profile_system"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.75"
thiserror = "1.0.48"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"
directories = "5.0"  # For finding user config directories
chrono = { version = "0.4.24", features = ["serde"] }