[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
clipper = { path = "../clipper" }
gif_converter = { path = "../gif_converter" }
gif_transparency = { path = "../gif_transparency" }
splitter = { path = "../splitter" }
merger = { path = "../merger" }
common = { path = "../common" }

eframe = "0.24.0"
egui = "0.24.0"
rfd = "0.12.0"
anyhow = "1.0.75"